Add back lenient mode in PR

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -31,10 +31,12 @@ process {
     // Simulation
     // Coverage process
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_INP' {
+        cache = "lenient"
         ext.prefix = { "${meta.id}.truth" }
         publishDir = [ enabled: false ]
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_DWN' {
+        cache = "lenient"
         ext.prefix = { "${meta.id}" }
         publishDir = [ enabled: false ]
     }
