--- a/conf/steps/imputation_glimpse2.config
+++ b/conf/steps/imputation_glimpse2.config
@@ -18,6 +18,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_GLIMPSE2:GLIMPSE2_PHASE' {
+        cache = "lenient"
         ext.prefix   = { "${meta.id}.batch${meta.batch}.${meta.chunk.replace(':','_')}.glimpse2" }
         ext.args     = { "--keep-monomorphic-ref-sites" }
         ext.suffix   = "bcf"
