--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -26,6 +26,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_GLIMPSE1:BCFTOOLS_MPILEUP' {
+        cache = "lenient"
         ext.args = [
             "-I",
             "-E",
@@ -39,6 +40,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_GLIMPSE1:BCFTOOLS_MERGE' {
+        cache = "lenient"
         ext.args = [
             "--write-index=tbi",
         ].join(' ')
