--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -25,6 +25,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:STITCH' {
+        cache = "lenient"
         ext.prefix = { "${meta.id}.batch${meta.batch}.${meta.chr}.stitch" }
     }
 
