--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -82,7 +82,7 @@ process {
     // Validation subworkflow
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:.*' {
         publishDir = [
-            path: { "${params.outdir}/validation" },
+            path: { "${params.outdir}/validation/" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
