Improve output organisation

--- a/conf/steps/simulation.config
+++ b/conf/steps/simulation.config
@@ -49,9 +49,9 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE_SAMTOOLS:SAMTOOLS_VIEW' {
         ext.args   = ["--output-fmt bam", "--write-index"].join(' ')
-        ext.prefix = { "${meta.id}_depth_${meta.depth}x" }
+        ext.prefix = { "${meta.id}.depth_${meta.depth}x" }
         publishDir = [
-            path: { "${params.outdir}/simulation/" },
+            path: { "${params.outdir}/simulation/samples" },
             mode: params.publish_dir_mode,
             saveAs: {  filename -> filename.equals('versions.yml') ? null : filename  }
         ]
