--- a/conf/modules.config
+++ b/conf/modules.config
@@ -88,7 +88,8 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SPLIT_BCFTOOLS:BCFTOOLS_PLUGINSPLIT' {
         tag = { "${meta.id} Batch ${meta.batch} ${meta.tools}" }
         ext.args   = ["--output-type z", "--write-index=tbi"].join(' ')
-        ext.prefix = { "${meta.id}_${meta.batch}" }
+        ext.prefix = { "${meta.id}.${meta.batch}" }
+        ext.suffix = { ".batch${meta.batch}.${meta.tools}" }
         publishDir = [
             path: { "${params.outdir}/imputation/${meta.tools}/samples/" },
             mode: params.publish_dir_mode,
