Fix splitting operation

--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -75,7 +75,7 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SPLIT_TRUTH:BCFTOOLS_PLUGINSPLIT' {
         ext.args   = ["--output-type z", "--write-index=tbi"].join(' ')
-        ext.prefix = { "${meta.id}.truth" }
+        ext.prefix = { "${meta.id}-truth-" }
     }
 
     // Validation subworkflow
