Fix splitting operation

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -93,7 +93,7 @@ process {
             path: { "${params.outdir}/imputation/${meta.tools}/samples/" },
             mode: params.publish_dir_mode,
             enabled: true,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename.tokenize("-")[-1] }
         ]
     }
 
