Update truth split

--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -67,7 +67,7 @@ process {
     // Split by samples
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SPLIT_TRUTH:BCFTOOLS_PLUGINSPLIT' {
         ext.args   = ["--output-type z", "--write-index=tbi"].join(' ')
-        ext.prefix = { "${meta.id}-truth" }
+        ext.prefix = { "${meta.id}-truth-" }
         publishDir = [
             path: { "${params.outdir}/validation/samples" },
             mode: params.publish_dir_mode,
