Update bcftools pluginsplit

--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -67,11 +67,10 @@ process {
     // Split by samples
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SPLIT_TRUTH:BCFTOOLS_PLUGINSPLIT' {
         ext.args   = ["--output-type z", "--write-index=tbi"].join(' ')
-        ext.prefix = { "${meta.id}-truth-" }
         publishDir = [
             path: { "${params.outdir}/validation/samples" },
             mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename.tokenize("-")[-1] }
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
@@ -102,6 +101,6 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GAWK' {
         ext.args2  = "'(NR == 1) || (FNR > 1)'" // Skip header line
         ext.suffix = { "txt" }
-        tag = {"Test Quality"}
+        tag = {"${meta.id}"}
     }
 }
