--- a/conf/modules.config
+++ b/conf/modules.config
@@ -88,12 +88,11 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SPLIT_BCFTOOLS:BCFTOOLS_PLUGINSPLIT' {
         tag = { "${meta.id} Batch ${meta.batch} ${meta.tools}" }
         ext.args   = ["--output-type z", "--write-index=tbi"].join(' ')
-        ext.prefix = { "${meta.id}-batch${meta.batch}-${meta.tools}-" }
         publishDir = [
             path: { "${params.outdir}/imputation/${meta.tools}/samples/" },
             mode: params.publish_dir_mode,
             enabled: true,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename.tokenize("-")[-1] }
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
