Add samples renaming for truth splitted files

--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -64,6 +64,20 @@ process {
         ext.args   = ["--ligate", "--output-type z", "--write-index=tbi"].join(' ')
     }
 
+    // Compute sample files for renaming
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BCFTOOLS_QUERY' {
+        tag = { "${meta.id} Batch ${meta.batch} ${meta.tools}" }
+        ext.args = '--list-samples'
+        publishDir = [enabled: false]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GAWK' {
+        tag = { "${meta.id} Batch ${meta.batch} ${meta.tools}" }
+        ext.prefix = { "${meta.id}_samples"}
+        ext.args2 = "'BEGIN { OFS = \"\\t\" } { print \$1, \"-\", \$1\".truth\" }'"
+        publishDir = [enabled: false]
+    }
+
     // Split by samples
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SPLIT_TRUTH:BCFTOOLS_PLUGINSPLIT' {
         ext.args   = ["--output-type z", "--write-index=tbi"].join(' ')
