--- a/conf/modules.config
+++ b/conf/modules.config
@@ -94,10 +94,7 @@ process {
             path: { "${params.outdir}/imputation/${meta.tools}/samples/" },
             mode: params.publish_dir_mode,
             enabled: true,
-            saveAs: { filepath ->
-                def filename = filepath.tokenize('/')[-1]
-                filename.equals('versions.yml') ? null : filename
-            }
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
