--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -84,10 +84,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/validation/samples" },
             mode: params.publish_dir_mode,
-            saveAs: { filepath ->
-                def filename = filepath.tokenize('/')[-1]
-                filename.equals('versions.yml') ? null : filename
-            }
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename}
         ]
     }
 
