--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -26,6 +26,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_MPILEUP' {
+        label = 'process_high'
         ext.args = [
             "-I",
             "-E",
