--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -61,7 +61,7 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_PHASE' {
         ext.args   = ["--impute-reference-only-variants"].join(' ')
         ext.prefix = { "${meta.id}.batch${meta.batch}.${meta.chunk.replace(':','_')}.glimpse1" }
-        ext.suffix = "bcf"
+        ext.suffix = "bcf.gz"
         publishDir = [ enabled: false ]
     }
 
