--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -27,8 +27,9 @@ params {
     genome          = "GRCh38"
 
     // Input data
-    input  = "${projectDir}/tests/csv/sample_sim_full.csv"
-    panel  = "${projectDir}/tests/csv/panel_full.csv"
+    input       = "${projectDir}/tests/csv/sample_sim_full.csv"
+    input_truth = "${projectDir}/tests/csv/sample_sim_full_truth.csv"
+    panel       = "${projectDir}/tests/csv/panel_full.csv"
 
     // Pipeline steps
     steps  = "all"
@@ -40,5 +41,5 @@ params {
     phase          = false
 
     // Impute tools
-    tools = "glimpse1"
+    tools = "glimpse2"
 }
