--- a/conf/steps/imputation_glimpse2.config
+++ b/conf/steps/imputation_glimpse2.config
@@ -21,7 +21,7 @@ process {
         cache = "lenient"
         ext.prefix   = { "${meta.id}.batch${meta.batch}.${meta.chunk.replace(':','_')}.glimpse2" }
         ext.args     = { "--keep-monomorphic-ref-sites" }
-        ext.suffix   = "bcf.gz"
+        ext.suffix   = "bcf"
         publishDir   = [ enabled: false ]
     }
 
