Fix multiqc file names

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -32,11 +32,22 @@ process {
     // Coverage process
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_INP' {
         cache = "lenient"
-        ext.prefix = { "${meta.id}.truth" }
+        ext.prefix = { "${meta.id}.truth.allchr" }
         publishDir = [ enabled: false ]
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_DWN' {
         cache = "lenient"
+        ext.prefix = { "${meta.id}.allchr" }
+        publishDir = [ enabled: false ]
+    }
+
+    // Filter chromosomes in coverage
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:FILTER_CHR_INP' {
+        ext.prefix = { "${meta.id}.truth" }
+        publishDir = [ enabled: false ]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:FILTER_CHR_DWN' {
         ext.prefix = { "${meta.id}" }
         publishDir = [ enabled: false ]
     }
@@ -86,8 +97,22 @@ process {
         ]
     }
 
+    // Compute sample files for renaming
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BCFTOOLS_QUERY_IMPUTED' {
+        tag = { "${meta.id} Batch ${meta.batch} ${meta.tools}" }
+        ext.args = '--list-samples'
+        publishDir = [enabled: false]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GAWK_IMPUTED' {
+        tag = { "${meta.id} Batch ${meta.batch} ${meta.tools}" }
+        ext.prefix = { "${meta.id}_samples"}
+        ext.args2  = { "-v tools=\"${meta.tools}\" " + "'BEGIN { OFS = \"\\t\" } { print \$1, \"-\", \$1\".\"tools }'" }
+        publishDir = [enabled: false]
+    }
+
     // Split by samples for each tool
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SPLIT_BCFTOOLS:BCFTOOLS_PLUGINSPLIT' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SPLIT_IMPUTED:BCFTOOLS_PLUGINSPLIT' {
         tag = { "${meta.id} Batch ${meta.batch} ${meta.tools}" }
         ext.args   = ["--output-type z", "--write-index=tbi"].join(' ')
         publishDir = [
