--- a/conf/steps/simulation.config
+++ b/conf/steps/simulation.config
@@ -23,6 +23,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_EXTRACT_REGION_SAMTOOLS:SAMTOOLS_MERGE' {
+        cache = "lenient"
         ext.prefix = { "${meta.id}" }
         tag = {"${meta.id} ${meta.chr}"}
     }
@@ -34,6 +35,7 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE_SAMTOOLS:.*' {
         tag = {"${meta.id} ${meta.chr}"}
     }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE_SAMTOOLS:SAMTOOLS_DEPTH' {
         publishDir = [enabled: false]
         ext.prefix = { "${meta1.id}_C${meta1.chr ?: "all"}.depth" }
@@ -49,6 +51,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE_SAMTOOLS:SAMTOOLS_VIEW' {
+        cache = "lenient"
         ext.args   = ["--output-fmt bam", "--write-index"].join(' ')
         ext.prefix = { "${meta.id}.depth_${meta.depth}x" }
         publishDir = [
