--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -27,6 +27,7 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_MPILEUP' {
         label = 'process_high'
+        cache = "lenient"
         ext.args = [
             "-I",
             "-E",
@@ -66,13 +67,13 @@ process {
     }
 
     // Compute sample files for renaming
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BCFTOOLS_QUERY' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BCFTOOLS_QUERY_TRUTH' {
         tag = { "${meta.id} Batch ${meta.batch} ${meta.tools}" }
         ext.args = '--list-samples'
         publishDir = [enabled: false]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GAWK' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GAWK_TRUTH' {
         tag = { "${meta.id} Batch ${meta.batch} ${meta.tools}" }
         ext.prefix = { "${meta.id}_samples"}
         ext.args2 = "'BEGIN { OFS = \"\\t\" } { print \$1, \"-\", \$1\".truth\" }'"
@@ -102,6 +103,22 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GLIMPSE2_CONCORDANCE' {
         ext.prefix = { "${meta.id}${meta.panel ? '_P' + meta.panel : ''}${meta.tools ? '_T' + meta.tools : ''}.concordance" }
         publishDir = [ enabled: false ]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GAWK_ERROR_SPL' {
+        tag = { "${meta.id} Batch ${meta.batch} ${meta.tools}" }
+        ext.prefix = { "${meta.id}${meta.panel ? '_P' + meta.panel : ''}${meta.tools ? '_T' + meta.tools : ''}.concordance.renamed.error.spl" }
+        ext.suffix = "txt.gz"
+        ext.args2  = { "-v tool=\"${meta.tools}\" " + "'BEGIN { OFS = \" \" } !/^#/ { \$3 = \$3\".\"tool } { print }'" }
+        publishDir = [enabled: false]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GAWK_RSQUARE_SPL' {
+        tag = { "${meta.id} Batch ${meta.batch} ${meta.tools}" }
+        ext.prefix = { "${meta.id}${meta.panel ? '_P' + meta.panel : ''}${meta.tools ? '_T' + meta.tools : ''}.concordance.renamed.rsquare.spl" }
+        ext.suffix = "txt.gz"
+        ext.args2  = { "-v tool=\"${meta.tools}\" " + "'BEGIN { OFS = \" \" } !/^#/ { \$1 = \$1\".\"tool } { print }'" }
+        publishDir = [enabled: false]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GUNZIP' {
