--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -56,8 +56,13 @@ process {
         publishDir = [
             path: { "${params.outdir}/prep_panel/panel" },
             mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: { !params.compute_freq && !params.phase }
+            saveAs: {
+                if ( !params.compute_freq && !params.phase ) {
+                    filename -> filename.equals('versions.yml') ? null : filename
+                } else {
+                    null
+                }
+            }
         ]
     }
 
@@ -66,8 +71,13 @@ process {
         publishDir = [
             path: { "${params.outdir}/prep_panel/panel" },
             mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: { !params.phase }
+            saveAs: {
+                if ( !params.phase ) {
+                    filename -> filename.equals('versions.yml') ? null : filename
+                } else {
+                    null
+                }
+            }
         ]
     }
 
@@ -76,8 +86,13 @@ process {
         publishDir = [
             path: { "${params.outdir}/prep_panel/panel" },
             mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: { !params.phase }
+            saveAs: {
+                if ( !params.phase ) {
+                    filename -> filename.equals('versions.yml') ? null : filename
+                } else {
+                    null
+                }
+            }
         ]
     }
 
