Rename to BAM_EXTRACT_REGION_SAMTOOLS

--- a/conf/steps/simulation.config
+++ b/conf/steps/simulation.config
@@ -12,20 +12,20 @@
 
 process {
     // Optional subworkflow to extract regions
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION_SAMTOOLS:.*' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_EXTRACT_REGION_SAMTOOLS:.*' {
         publishDir = [ enabled: false ]
         tag = {"${meta.id} ${meta.chr}"}
     }
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION_SAMTOOLS:SAMTOOLS_VIEW' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_EXTRACT_REGION_SAMTOOLS:SAMTOOLS_VIEW' {
         ext.args   = ["--output-fmt bam", "--write-index"].join(' ')
         ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}" }
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION_SAMTOOLS:SAMTOOLS_MERGE' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_EXTRACT_REGION_SAMTOOLS:SAMTOOLS_MERGE' {
         ext.prefix = { "${meta.id}" }
         tag = {"${meta.id} ${meta.chr}"}
     }
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION_SAMTOOLS:SAMTOOLS_INDEX' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_EXTRACT_REGION_SAMTOOLS:SAMTOOLS_INDEX' {
         ext.args = ""
     }
 
