--- a/conf/test_all.config
+++ b/conf/test_all.config
@@ -29,11 +29,14 @@ params {
 
     // Genome references
     fasta        = params.pipelines_testdata_base_path + "hum_data/reference_genome/GRCh38.s.fa.gz"
+
+    // Panel preparation
     panel        = "${projectDir}/tests/csv/panel.csv"
     phase        = true
     normalize    = true
-    compute_freq = false
+    compute_freq = true
     chunk_model  = "recursive"
+    remove_samples = "NA12878,NA12891,NA12892"
 
     // Pipeline steps
     steps = "all"
