--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -56,9 +56,9 @@ process {
         publishDir = [
             path: { "${params.outdir}/prep_panel/panel" },
             mode: params.publish_dir_mode,
-            saveAs: {
+            saveAs: { filename ->
                 if ( !params.compute_freq && !params.phase ) {
-                    filename -> filename.equals('versions.yml') ? null : filename
+                    filename.equals('versions.yml') ? null : filename
                 } else {
                     null
                 }
@@ -71,9 +71,9 @@ process {
         publishDir = [
             path: { "${params.outdir}/prep_panel/panel" },
             mode: params.publish_dir_mode,
-            saveAs: {
+            saveAs: { filename ->
                 if ( !params.phase ) {
-                    filename -> filename.equals('versions.yml') ? null : filename
+                    filename.equals('versions.yml') ? null : filename
                 } else {
                     null
                 }
@@ -86,9 +86,9 @@ process {
         publishDir = [
             path: { "${params.outdir}/prep_panel/panel" },
             mode: params.publish_dir_mode,
-            saveAs: {
+            saveAs: { filename ->
                 if ( !params.phase ) {
-                    filename -> filename.equals('versions.yml') ? null : filename
+                    filename.equals('versions.yml') ? null : filename
                 } else {
                     null
                 }
