--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -42,4 +42,16 @@ params {
 
     // Impute tools
     tools = "glimpse2"
+
+    // Concordance arguments
+    min_val_gl = null
+    min_val_dp = null
+}
+
+process {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GLIMPSE2_CONCORDANCE' {
+        ext.args = "--gt-val --af-tag AF"
+        ext.prefix = { "${meta.id}${meta.panel ? '_P' + meta.panel : ''}${meta.tools ? '_T' + meta.tools : ''}.concordance" }
+        publishDir = [ enabled: false ]
+    }
 }
