--- a/nextflow.config
+++ b/nextflow.config
@@ -306,7 +306,7 @@ manifest {
     description     = """Phasing and imputation pipeline"""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=24.04.2'
-    version         = '1.0.0'
+    version         = '1.1.0dev'
     doi             = ''
 }
 
