--- a/nextflow.config
+++ b/nextflow.config
@@ -307,7 +307,7 @@ manifest {
     mainScript      = 'main.nf'
     nextflowVersion = '!>=24.04.2'
     version         = '1.0.0'
-    doi             = ''
+    doi             = 'https://doi.org/10.5281/zenodo.14329225'
 }
 
 // Nextflow plugins
